update from home

--- a/ZKfamily/app/src/main/res/layout/pick_picture.xml
+++ b/ZKfamily/app/src/main/res/layout/pick_picture.xml
@@ -29,4 +29,4 @@
         android:textColor="#0000ff"
         android:textSize="18sp"
         android:textStyle="bold" />
-</LinearLayout>òZÍüÆ„v<ßvÎ'£‰^„ùo ¿æ;URÌ.}%Y
+</LinearLayout>
