--- a/ZKfamily/app/src/main/res/layout/welcome_navigation.xml
+++ b/ZKfamily/app/src/main/res/layout/welcome_navigation.xml
@@ -58,5 +58,11 @@
         android:textColor="@color/light_yellow"
         android:textSize="@dimen/size14" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar" />
+
 </FrameLayout>
 
